--- a/assets/_styles/internal.scss
+++ b/assets/_styles/internal.scss
@@ -198,6 +198,7 @@ $gutter: 1.25%;
     height: 100%;
     width: 97%;
     padding: 0 0 0 3%;
+    line-height: 32px;
     border: 0;
     color: $grey-1 !important;
     behavior: url(/htc/PIE.htc);
